AL OMAS - remove PortAliases from Process context
Signed-off-by: Raluca Popa <raluca.popa2@ing.com>